# toolforge

./: .gitignore  Containerfile  Makefile  README.md  pyproject.toml
configs/data/: default.yaml
configs/specs/: README.md  argument_accuracy.yaml  error_recovery.yaml  hallucination_resistance.yaml  multi_tool_sequencing.yaml  relevance_detection.yaml  tool_selection.yaml
configs/training/: dpo.yaml  sft.yaml  sft_continue.yaml
docs/: ARCHITECTURE.md
src/toolforge/: __init__.py  cli.py
src/toolforge/data/: __init__.py  augment.py  download.py  formatter.py  mlx_format.py  prepare.py  schema.py  validate.py
src/toolforge/eval/: harness.py  metrics.py  models.py  specs.py
src/toolforge/serving/: __init__.py  api.py  demo.py
src/toolforge/training/: __init__.py  dpo.py  preference.py  sft.py
tests/unit/: test_augment.py  test_download.py  test_dpo.py  test_formatter.py  test_metrics.py  test_mlx_format.py  test_models.py  test_prepare.py  test_schema.py  test_serving.py  test_sft.py  test_specs.py  test_validate.py
